# wadump

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  install.sh
.github/workflows/: release.yml
ci/: before_deploy.sh
wa/: Cargo.toml  build.rs
wa/src/: constants.rs  lib.rs  proto.rs  wa.proto
wa/src/binary/: decoder.rs  mod.rs  node.rs
